@@ -5870,20 +5870,17 @@ mono_class_from_name (MonoImage *image, const char* name_space, const char *name
 				return return_nested_in (class, nested);
 			return class;
 		} else if ((impl & MONO_IMPLEMENTATION_MASK) == MONO_IMPLEMENTATION_ASSEMBLYREF) {
-			MonoAssembly **references = image->references;
 			guint32 assembly_idx;
 
 			assembly_idx = impl >> MONO_IMPLEMENTATION_BITS;
 
-			if (!references [assembly_idx - 1])
-				mono_assembly_load_reference (image, assembly_idx - 1);
-			g_assert (references == image->references);
-			g_assert (references [assembly_idx - 1]);
-			if (references [assembly_idx - 1] == (gpointer)-1)
+			mono_assembly_load_reference (image, assembly_idx - 1);
+			g_assert (image->references [assembly_idx - 1]);
+			if (image->references [assembly_idx - 1] == (gpointer)-1)
 				return NULL;			
 			else
 				/* FIXME: Cycle detection */
-				return mono_class_from_name (references [assembly_idx - 1]->image, name_space, name);
+				return mono_class_from_name (image->references [assembly_idx - 1]->image, name_space, name);
 		} else {
 			g_error ("not yet implemented");
 		}
